# leno-project

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
auth_app/: admin.py  forms.py  managers.py  models.py  tasks.py  urls.py  views.py
auth_app/clasess/: auth.py  profile.py
auth_app/migrations/: 0001_initial.py  0002_remove_usertoken_created_at_and_more.py
base/: __init__.py  asgi.py  dj_celery.py  settings.py  urls.py  views.py
base/utils/: custom_user_passes_test.py  mixin.py
dockerfile/base_image/: Dockerfile
dockerfile/nginx/: Dockerfile  nginx.conf
dockerfile/prod/: Dockerfile
templates/: base.html  main.html
templates/auth_app/: auth-profile.html  auth-signup-login.html  auth_login.html
templates/auth_app/civil_registry/: auth-registry.html  civil_registry.html
templates/auth_app/home/: test_home.html
templates/auth_app/login/: auth-signup-login-verify.html  auth-signup-login.html
templates/auth_app/logout/: auth-logout.html
templates/auth_app/profile/: auth-profile.html
templates/partials/: messages.html
templates/partials/dashboard/: dashboard.html
templates/partials/header/: partial-header.html
templates/partials/main/: best-saller.html  date-main.html  economy-primary.html  economy-secondery.html  layout-leftside.html  main-content.html  main.html  order.html  recent-activity.html  recent-order.html  sallers.html  simplebar-alert.html  simplebar-category.html  simplebar-comment.html  simplebar-rate.html  simplebar.html  top-sallers.html  view-on-shop.html
