[project]
name = "leno-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "celery-pool-asyncio>=0.2.0",
    "colorlog>=6.10.1",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "jdatetime>=5.2.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "uvicorn-worker>=0.4.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "eventlet>=0.40.3",
    "flower>=2.0.1",
    "ipdb>=0.13.13",
    "psutil>=7.1.3",
    "whitenoise>=6.11.0",
]
